My latest features/fixes for the Vizora project

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Product Performance Analyzer - Advanced Analytics Dashboard</title>
     <meta name="description" content="Professional analytics dashboard for analyzing product sales performance, revenue trends, and business intelligence insights" />
-    <meta name="author" content="Lovable" />
+    <meta name="author" content="Vizora" />
 
     <meta property="og:title" content="Product Performance Analyzer - Advanced Analytics Dashboard" />
     <meta property="og:description" content="Professional analytics dashboard for analyzing product sales performance, revenue trends, and business intelligence insights" />
